Atualizaçao  Heroku Gestao_GitHub

--- a/linguagem/templates/linguagem_update.html
+++ b/linguagem/templates/linguagem_update.html
@@ -4,7 +4,7 @@
 {% block title %} Altera SisLinguagem {% endblock %}
 
 {% block main %}
-    <h1>Sistema de Busca de Linguagem no GitHub</h1>
+    <h1>Sistema de Busca Informações no GitHub</h1>
      <div class="col">
             {% if user.is_authenticated %}
                 <p>Ola {{user.username }}</p>
