--- a/linguagem/templates/linguagem_list.html
+++ b/linguagem/templates/linguagem_list.html
@@ -5,7 +5,7 @@
 
 
 {% block main %}
-    <h1>Sistema de Busca de Linguagem no GitHub</h1>
+    <h1>Sistema de Busca Informações no GitHub</h1>
     <div class="row">
         <div class="col">
 
