Fix bug no Gestao_GgitHub

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static 'stick-footer.css' %}">
     <link rel="stylesheet" href="{% static 'style.css' %}">
-    <title>{% block title %}   <h1>Sistema de Busca de Linguagem no GitHub</h1> {% endblock %}</title>
+    <title>{% block title %}   <h1>Sistema de Busca de Informações no GitHub</h1> {% endblock %}</title>
 </head>
 <body>
 
