--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -5,7 +5,7 @@
 {% block title %} Login SisLinguagem {% endblock %}
 
 {% block main %}
-    <h1>Sistema de Busca de Linguagem no GitHub</h1>
+    <h1>Sistema de Busca de Informações no GitHub</h1>
     <h2>Login</h2>
     <form method="post">
         {% csrf_token %}
