--- a/linguagem/templates/linguagem_delete_confirm.html
+++ b/linguagem/templates/linguagem_delete_confirm.html
@@ -5,17 +5,18 @@
 
 {% block main %}
 
-    <h1>Sistema de Busca Informações no GitHub</h1>
+       <h1>Sistema de Busca no Repositório Octokit - GitHub</h1>
         <div class="col">
             {% if user.is_authenticated %}
-                <p>Ola {{user.username }}</p>
+            <p><b>Ola {{user.username }}</b></p>
             {% endif %}
         </div>
 
     <h3>Deletar Registro</h3>
 
-    <h3>Tem certeza que deseja deletar a linguagem: {{ linguagem.linguagem_name }} Fabricante: {{ linguagem.fabricante }}
-        Rank: {{ linguagem.rank }}</h3>
+    <h3>Tem certeza que deseja deletar a linguagem: {{ linguagem.linguagem_name }}</h3>
+    <h3>Forks: {{ linguagem.forks  }}</h3>
+    <h3>Whatchers: {{ linguagem.watches  }}</h3>
 
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
@@ -23,18 +24,18 @@
         <button type="submit" class="btn btn-danger">Deletar</button>
         <a href="{% url 'logout' %}" class="btn btn-dark">Sair</a>
         <a href="{% url 'linguagem_list' %}" class="btn btn-success">Listar</a>
-        <a href="{% url 'get_repos' %}" class="btn btn-info"> Buscar</a>
+        <a href="{% url 'get_repos_new' %}" class="btn btn-info"> Buscar</a>
         <a href="{% url 'linguagem_new' %}" class="btn btn-primary"> Incluir</a>
+        <br>Listar => Lista do Bco. de Dados.</br>
+        <a></a>Buscar => Atualiza do Repositório do GitHub.</a>
     </form>
-
-
 
 {% endblock %}
 
 {% block footer %}
     <footer class="footer">
       <div class="container">
-        <span class="text-muted">Desenvolvimento web com Django 2.x Adalberto</span>
+           <span class="text-muted">Desenvolvimento web com Django 2.x Adalberto</span>
       </div>
     </footer>
 {% endblock %}
