--- a/linguagem/templates/linguagem_list.html
+++ b/linguagem/templates/linguagem_list.html
@@ -35,10 +35,10 @@
              <a href="{% url 'linguagem_list' %}" class="btn btn-success">Listar</a>
              <a href="{% url 'get_repos_new' %}" class="btn btn-info"> Buscar</a>
              <a href="{% url 'linguagem_new' %}" class="btn btn-primary"> Incluir</a>
-             <br>Listar   => Lista todos os rgistros do Bco. de Dados.</br>
-            <a> Buscar  => Atualiza as 5 linguagens do Repositório Octokit do GitHub.</a>
-            <br>Editar  => Clicar no registro.</br>
-            <a> Deletar => Clicar na lixeira ao lado do registro.</a>
+             <br>Listar   => Lista todos os registros do Bco. de Dados.</br>
+             <a> Buscar  => Atualiza as 5 linguagens do Repositório Octokit do GitHub.</a>
+             <br>Editar  => Clicar no registro.</br>
+             <a> Deletar => Clicar na lixeira ao lado do registro.</a>
         </div>
 
     </div>
