--- a/linguagem/templates/linguagem_new.html
+++ b/linguagem/templates/linguagem_new.html
@@ -18,7 +18,7 @@
         <a href="{% url 'logout' %}" class="btn btn-dark">Sair</a>
         <a href="{% url 'linguagem_list' %}" class="btn btn-success">Listar</a>
         <a href="{% url 'get_repos_new' %}" class="btn btn-info"> Buscar</a>
-        <br>Listar => Lista do Bco. de Dados.</br>
+        <br>Listar   => Lista todos os registros do Bco. de Dados.</br>
         <a></a>Buscar => Atualiza do Repositório do GitHub.</a>
     </form>
 {% endblock %}
