--- a/linguagem/templates/linguagem_update.html
+++ b/linguagem/templates/linguagem_update.html
@@ -19,7 +19,7 @@
         <a href="{% url 'linguagem_list' %}" class="btn btn-success">Listar</a>
         <a href="{% url 'get_repos_new' %}" class="btn btn-info"> Buscar</a>
         <a href="{% url 'linguagem_new' %}" class="btn btn-primary"> Incluir</a>
-        <br>Listar => Lista do Bco. de Dados.</br>
+        <br>Listar   => Lista todos os registros do Bco. de Dados.</br>
         <a></a>Buscar => Atualiza do Repositório do GitHub.</a>
      </form>
 {% endblock %}
